@@ -70,6 +70,7 @@ Version 1.13.7+dev:
    * New [zoom] tag allows changing the zoom level from an event
    * [kill]animate=yes now plays victory animations if applicable
    * Fix [volume] not accepting 100% as the new volume.
+   * New concat_to_* keys in unit_type inheritance allow amending keys
  * Miscellaneous and bug fixes:
    * Fixed base animation showing on walking corpse & soulless bats (bug #25673)
 
